# zoomdownloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  scraper.py  viewer.py  zoom_midi.py
.github/workflows/: build-deb.yml
debian/: control
docs/screenshots/: README.md
downloads/: README.md
index/: README.md
